# statey

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
examples/: abstract_example_state.h  data.h  download_failed_state.h  download_succeeded_state.h  downloading_state.h  example_context.h  starting_state.h  state_machine_example.cpp
include/: state_machine.h  state_machine.hpp
test/: state_machine_test.cpp
